@@ -56,6 +56,8 @@ Bug Fixes
 * SOLR-6035: CloudSolrServer directUpdate routing should use getCoreUrl.
   (Marvin Justice, Joel Bernstein)
 
+* SOLR-5340: Add support for named snapshots (Varun Thacker via Noble Paul)
+
 
 ==================  4.8.0 ==================
 
